<resources>
    <string name="app_name">Gym De</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Entrar</string>
    <string name="create_account">Criar conta</string>
    <string name="gymBrandLogo">Logotipo da marca de academia Gym De.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="noHaveAccount">Não tem conta? Crie aqui!</string>
    <string name="what_is_your_sex">Qual é o seu sexo?</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="advance">Avançar</string>
    <string name="whats_is_your_height">Qual é a sua altura?</string>
    <string name="height">Altura ( cm )</string>
    <string name="what_is_your_weight">Qual é o seu peso?</string>
    <string name="weight">Peso ( kg )</string>
    <string name="what_is_your_age">Qual é a sua idade?</string>
    <string name="age">Idade</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="register">Registrar</string>
    <string name="today_workouts">Treinos de hoje</string>
    <string name="health_articles">Artigos de saúde</string>
    <string name="about_us">Sobre nós</string>
    <string name="about_Gym_De">\""</string>
    <string name="image_workout">Imagem do treino.</string>
    <string name="home">Início</string>
    <string name="me">Eu</string>
    <string name="new_workout">Novo treino</string>
    <string name="new_workout_btn_description">Botão para adicionar novo treino.</string>
    <string name="btn_edit_photo">Botão de editar foto.</string>
    <string name="start">Iniciar</string>
    <string name="edit">Editar</string>
    <string name="image_health_article">Imagem do artigo de saúde.</string>
    <string name="description">Descrição</string>
    <string name="alimentation">Alimentação</string>
    <string name="read_article">Ler artigo</string>
    <string name="workouts">Treinos</string>
    <string name="title_workout">Título de treino</string>
    <string name="create_day">Data de criação: %1$s</string>
    <string name="edit_workout">Botão editar treino.</string>
    <string name="new_exercise">Novo exercício</string>
    <string name="title_exercise">Título exercício</string>
    <string name="exercise_description">Descrição de exercício.</string>
    <string name="create_workout">Criar treino</string>
    <string name="cancel">Cancelar</string>
    <string name="monday">Segunda-feira</string>
    <string name="tuesday">Terça-feira</string>
    <string name="wednesday">Quarta-feira</string>
    <string name="thursday">Quinta-feira</string>
    <string name="friday">Sexta-feira</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="delete">Excluir</string>
    <string name="exercises">Exercícios</string>
    <string name="amount_series">Quantidade de séries</string>
    <string name="add_photo">Adicionar foto</string>
    <string name="create_exercise">Criar exercício</string>
    <string name="short_password">Senha deve ter ao menos seis caracteres.</string>
    <string name="no_valid_email">Email não é válido.</string>
    <string name="no_valid_height">Altura não é válida, lembre-se a altura deve ser descrita em centímetros.</string>
    <string name="no_valid_weight">Peso não é válido, lembre-se o peso deve ser descrito em KG.</string>
    <string name="no_valid_age">Idade não é válida, lembre-se a idade deve ser descrita em ANOS.</string>
    <string name="no_valid_name">O nome não é valido.</string>
    <string name="no_valid_confirm_password">Senha e confirmar senha devem ser iguais.</string>
    <string name="create_success">Treino criado com sucesso.</string>
    <string name="new_name">Novo nome</string>
    <string name="new_description">Nova descrição</string>
    <string name="save">Salvar</string>
    <string name="no_workout_today">Não há treinos marcados para hoje.</string>
    <string name="photo_error">Erro ao carregar a foto.</string>
    <string name="quantitySeries">Repetições: %1$s </string>
    <string name="workout_day">Dias do treino</string>
    <string name="AlertDialogTitle">Atenção</string>
    <string name="supporting_text">Você quer mesmo excluir este treino?</string>

    <string name="similar_feature_in_exercises">Feature semelhante implementada ao criar exercícios.</string>
    <string name="similar_feature_update_workouts">Feature semelhante implementada ao atualizar treinos.</string>
    <string name="no_implementation">Feature não implementada.</string>
    <string name="workoutDays">Dias do treino: %1$s</string>
    <string name="logout">Sair</string>
</resources>