<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_exercise"
        android:layout_width="60dp"
        android:layout_height="60dp"

        android:layout_margin="@dimen/small_margin"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_workout"
        tools:src="@drawable/mockphoto1"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.None"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_exerciseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="@id/iv_exercise"
        android:layout_marginStart="@dimen/medium_margin"

        tools:text="@string/title_exercise"
        style="@style/TextAppearance.Material3.TitleMedium"

        app:layout_constraintStart_toEndOf="@id/iv_exercise"/>

    <TextView
        android:id="@+id/tv_exerciseDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        tools:text="@string/exercise_description"
        style="@style/TextAppearance.Material3.BodySmall"

        app:layout_constraintStart_toEndOf="@id/iv_exercise"
        app:layout_constraintTop_toBottomOf="@id/tv_exerciseTitle"
        app:layout_constraintStart_toStartOf="@id/tv_exerciseTitle"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonStyle"

        app:icon="@drawable/ic_edit"
        android:contentDescription="@string/edit_workout"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_exercise" />

</androidx.constraintlayout.widget.ConstraintLayout>