<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_healthArticles"
            android:layout_width="match_parent"
            android:layout_height="150dp"

            android:contentDescription="@string/image_health_article"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tv_titleArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:maxLines="2"
            android:ellipsize="end"
            android:padding="@dimen/medium_padding"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            tools:text="@string/alimentation" />


        <com.google.android.material.button.MaterialButton
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/read_article" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>