<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    android:orientation="vertical"
    tools:context=".GenderFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleLarge"

        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/what_is_your_weight"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_weight"
        android:layout_marginHorizontal="@dimen/big_margin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="100dp"
        android:layout_height="50dp"

        android:layout_marginTop="@dimen/small_margin"
        android:progress="60"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_advance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/advance" />
</androidx.appcompat.widget.LinearLayoutCompat>